force-app/main/default/objects/IT_Asset_Assignment__c/IT_Asset_Assignment__c.object-meta.xml
<CustomObject>
    <compactLayoutAssignment
  >IT_Asset_Assignment_Compact_Layout</compactLayoutAssignment>
    <description
  >Used each time an IT Asset is assigned or reassigned throughout the life of the asset.</description>
    <label>Assignment History</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Assign#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>