force-app/main/default/objects/IT_Asset_Assignment__c/fields/Currently_Assigned_to_del__c.field-meta.xml
<CustomField>
    <fullName>Currently_Assigned_to_del__c</fullName>
    <formula>IT_Asset__r.Assigned_to__c</formula>
    <label>Currently Assigned to</label>
    <type>Text</type>
</CustomField>