force-app/main/default/objects/IT_Asset_Assignment__c/fields/Currently_Assigned_to_Id_del__c.field-meta.xml
<CustomField>
    <fullName>Currently_Assigned_to_Id_del__c</fullName>
    <formula>IT_Asset__r.Current_Assignment__r.Employee__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currently Assigned to Id</label>
    <type>Text</type>
</CustomField>