force-app/main/default/objects/IT_Asset_Assignment__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The date this IT Asset Assignment was made.</description>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>