force-app/main/default/objects/IT_Asset_Assignment__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description
  >The employee or room that this IT Asset is assigned to.</description>
    <label>Employee</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage
    >You can only assign assets to active employees.</errorMessage>
        <filterItems>
            <field>Employee__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Assignment History</relationshipLabel>
    <relationshipName>IT_Asset_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>