force-app/main/default/objects/IT_Asset_Assignment__c/fields/Employee_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Employee_End_Date__c</fullName>
    <formula>Employee__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee End Date</label>
    <type>Date</type>
</CustomField>